--- a/conf/container-image-x86_64.conf
+++ b/conf/container-image-x86_64.conf
@@ -1,14 +1,2 @@
-#
-# Sample multilib configuration which the user can either add in local.conf
-# or specific in an configuration file like this, then require it.
-
-MACHINE = "qemux86-64"
-
 PREFERRED_PROVIDER_virtual/kernel = "linux-dummy"
-
-# XXX: given the image is super minimal, looks like we no longer care about these.
-# Get rid of python dependecy imposed by opkg-utils
-# another option would be dpkg, but that pulls in perl...
-#PREFERRED_PROVIDER_virtual/update-alternatives = "chkconfig"
-#PREFERRED_PROVIDER_virtual/update-alternatives-native = "chkconfig-alternatives-native"
-#VIRTUAL-RUNTIME_update-alternatives = "chkconfig"
+IMAGE_FSTYPES = "tar.bz2"
