--- a/misc/docker/build_appliance/Dockerfile
+++ b/misc/docker/build_appliance/Dockerfile
@@ -1,4 +1,7 @@
 FROM scratch
 ADD ./container-build-appliance-qemux86-64.tar.bz2 ./
+RUN useradd -u 1000 -U builder
+WORKDIR /poky
+USER builder
 ENTRYPOINT [ "/bin/bash" ]
 CMD [ "-l" ]
