Commit `ASSUME_PROVIDED` as is

--- a/recipes-container/images/container-build-appliance/assume_provided.conf
+++ b/recipes-container/images/container-build-appliance/assume_provided.conf
@@ -1,46 +1,64 @@
 ASSUME_PROVIDED += "\
-  libsdl-native \
-  qemu-native \
-  xz-native \
-  m4-native \
-  prelink-native \
-  readline-native \
-  gnu-config-native \
-  perl-native \
-  ncurses-native \
-  binutils-native \
-  beecrypt-native \
-  attr-native \
-  elfutils-native \
-  pkgconfig-native \
-  texinfo-native \
-  kconfig-frontends-native \
-  libtool-native \
-  gettext-native \
-  quilt-native \
-  zlib-native \
-  ossp-uuid-native \
-  cryptodev-linux-native \
-  gperf-native \
-  autoconf-native \
-  rpm-native \
-  libpcre-native \
-  gmp-native \
-  pigz-native \
-  mpfr-native \
-  flex-native \
-  bison-native \
-  python-native \
-  popt-native \
-  bzip2-native \
-  file-native \
-  byacc-native \
-  db-native \
-  update-rc.d-native \
   acl-native \
-  openssl-native \
-  libmpc-native \
+  attr-native \
+  autoconf-native \
   automake-native \
+  beecrypt-native \
+  binutils-native \
+  binutils-cross-x86_64 \
+  virtual/x86_64-poky-linux-binutils \
+  bison-native \
+  byacc-native \
+  bzip2-native \
+  cross-localedef-native \
+  cryptodev-linux-native \
+  db-native \
+  e2fsprogs-native \
+  elfutils-native \
+  file-native \
+  flex-native \
+  gettext-native \
+  gmp-native \
+  gnu-config-native \
+  gperf-native \
+  kconfig-frontends-native \
+  ldconfig-native \
+  libmpc-native \
+  libpcre-native \
+  libsdl-native \
+  libtool-native \
+  lzo-native \
+  m4-native \
+  makedevs-native \
+  mklibs-native \
+  kern-tools-native \
+  mpfr-native \
+  ncurses-native \
+  openssl-native \
+  opkg-native \
+  opkg-utils-native \
+  ossp-uuid-native \
+  perl-native \
+  pigz-native \
+  pkgconfig-native \
+  popt-native \
+  prelink-native \
+  python-native \
+  qemu-native \
+  quilt-native \
+  readline-native \
+  rpm-native \
   sqlite3-native pseudo-native \
+  texinfo-native \
+  texinfo-dummy-native \
+  unifdef-native \
+  update-rc.d-native \
+  util-linux-native \
   virtual/fakeroot-native \
+  xz-native \
+  zlib-native \
+  gzip-native \
+  virtual/x86_64-poky-linux-gcc \
+  virtual/x86_64-poky-linux-compilerlibs \
+  virtual/libc-native \
   "
