Remove `{perl,python}-native`, as we really have to build those, fix bzip2

--- a/recipes-container/images/container-build-appliance/assume_provided.conf
+++ b/recipes-container/images/container-build-appliance/assume_provided.conf
@@ -9,7 +9,8 @@ ASSUME_PROVIDED += "\
   virtual/x86_64-poky-linux-binutils \
   bison-native \
   byacc-native \
-  bzip2-native \
+  virtual/bzip2-native \
+  bzip2-replacement-native \
   cross-localedef-native \
   cryptodev-linux-native \
   db-native \
@@ -38,12 +39,10 @@ ASSUME_PROVIDED += "\
   opkg-native \
   opkg-utils-native \
   ossp-uuid-native \
-  perl-native \
   pigz-native \
   pkgconfig-native \
   popt-native \
   prelink-native \
-  python-native \
   qemu-native \
   quilt-native \
   readline-native \
