Latest state of affairs...

--- a/recipes-container/images/container-build-appliance/assume_provided.conf
+++ b/recipes-container/images/container-build-appliance/assume_provided.conf
@@ -3,6 +3,7 @@ ASSUME_PROVIDED += "\
   attr-native \
   autoconf-native \
   automake-native \
+  make-native \
   beecrypt-native \
   binutils-native \
   binutils-cross-x86_64 \
@@ -57,7 +58,5 @@ ASSUME_PROVIDED += "\
   xz-native \
   zlib-native \
   gzip-native \
-  virtual/x86_64-poky-linux-gcc \
-  virtual/x86_64-poky-linux-compilerlibs \
   virtual/libc-native \
   "
